--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body>
-  <% if (locals.fileLink != null) { %>
-    <div style="margin-bottom: 1rem;">
-      Your file is upload
-      <a href="<%= locals.fileLink %>"><%= locals.fileLink %></a>
+
+<body class="bg-gray-100 flex items-center justify-center h-screen">
+    <div class="bg-white rounded-lg shadow-md p-8 max-w-sm w-full">
+        <% if (locals.fileLink != null) { %>
+        <div class="mb-4">
+            <p class="text-lg font-semibold">Your file is uploaded:</p>
+            <a href="<%= locals.fileLink %>" class="text-blue-500 hover:underline block mt-2" target="_blank"><%= locals.fileLink %></a>
+        </div>
+        <% } %>
+        <form action="/upload" method="post" class="grid gap-4">
+            <label for="file" class="block">Choose a file:</label>
+            <input type="file" id="file" name="file" required class="border border-gray-300 rounded-md p-2">
+
+            <label for="password" class="block">Enter password (optional):</label>
+            <input type="password" id="password" name="password" class="border border-gray-300 rounded-md p-2">
+
+            <button type="submit" class="bg-purple-600 text-white font-semibold py-2 px-4 rounded-lg w-full hover:bg-purple-700 transition duration-300">Share</button>
+        </form>
     </div>
-  <% } %>
-  <form action="/upload" method="post" style="display: grid; gap: .5rem; grid-template-columns: auto 1fr; max-width: 500px; margin: 0 auto;" enctype="multipart/form-data">
-    <label for="file">File:</label>
-    <input type="file" id="file" name="file" required />
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" />
-    <button style="grid-column: span 2;" type="submit">Share</button>
-  </form>
 </body>
+
 </html>
